@@ -51,6 +51,9 @@ Client library:
 - Threaded mode is deconfigured when the mosquitto_loop_start() thread ends,
   which allows mosquitto_loop_start() to be called again. Closes #2242.
 
+Apps:
+- Fix `mosquitto_ctrl dynsec setDefaultACLAccess` command not working.
+
 Clients:
 - mosquitto_sub and mosquitto_rr now open stdout in binary mode on Windows
   so binary payloads are not modified when printing.
